Expose REST API for create an expense category
